<resources>
    <string name="app_name">Guess The Number</string>
    <string name="start_game_btn">Start Game</string>
    <string name="settings_btn">Settings</string>
    <string name="achievements_btn">Achievements</string>
    <string name="about_btn">About</string>
    <string name="exit_btn">Quit</string>
    <string name="statistics_btn">Statistics</string>
    <string name="number_too_big">The guessed number was too big!</string>
    <string name="number_too_small">The guessed number was too small!</string>
    <string name="turns_left">Turns left: </string>
    <string name="ktu">This project is a direct result of development course (P175B156) at Kaunas University of Technology</string>
    <string name="author">Developed by: Justinas Genčerauskas IFC-6, with assistance from Andrius Paulauskas</string>
</resources>
